--- a/frontend/src/pages/SugerirFilmes/styles.css
+++ b/frontend/src/pages/SugerirFilmes/styles.css
@@ -1,18 +1,3 @@
-body {
-    background-color: #0F0F0F;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    overflow-y:scroll;
-    height: 100%;
-    overflow-x: hidden;
-}
-
-html {
-    height: 100%;
-    overflow-x: hidden;
-}
-
 #header {
     display: flex;
     flex-direction: row;
@@ -71,10 +56,11 @@ html {
 }
 
 #content2 {
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100%;
+    align-self: center;
 }
 
 .textOption {
@@ -111,15 +97,19 @@ html {
     margin-left: 7px;
 }
 
-#movieContainer {
-    background-color: #313131;
+.movieContainer {
+    background: rgba(0, 0, 0, 0.5);
     width: 71.9%;
     border-top-right-radius: 15px;
     border-top-left-radius: 15px;
     display: flex;
-    height: 100%;
+    height: 100vh;
     flex-direction: column;
 }
+
+.movieContainer:hover:before {
+    background: none;
+  }
 
 #infoContainer {
     margin-top: 1.3%;
@@ -131,6 +121,8 @@ html {
     border-top-right-radius: 15px;
     border-top-left-radius: 15px;;
     width: 100%;
+    height: 100%;
+
 }
 
 #containerImage {
@@ -177,7 +169,6 @@ html {
 }
 
 #buttonMovie {
-    background-color:#FF0707;
     padding-top: 1.2%;
     padding-bottom: 1.2%;
     border-radius: 20px;
