--- a/frontend/src/pages/SugerirFilmes/styles.css
+++ b/frontend/src/pages/SugerirFilmes/styles.css
@@ -59,6 +59,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    cursor: pointer;
     justify-content: center;
     align-self: center;
 }
